Se termina todas las interfaces

--- a/views/index.html
+++ b/views/index.html
@@ -38,27 +38,16 @@
             </header>
             <main class="content">
                 <article class="article">
-                    <h1>Coraje, el perro Cobarde</h1>>
-                    <h1>Title</h1>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est corrupti repudiandae quo amet magnam
-                        mollitia necessitatibus incidunt veritatis officia veniam aperiam, sunt cumque sequi? Perferendis
-                        doloremque quaerat eos quas dolores.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, ipsum? Minus unde quia officiis ipsum
-                        laboriosam dolorem. Similique, recusandae dicta.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, ipsum? Minus unde quia officiis ipsum
-                        laboriosam dolorem. Similique, recusandae dicta.</p>
+                    <h1>Coraje, el perro Cobarde</h1>
+                    <p>Coraje, el perro cobarde es una serie animada estadounidense creada, producida, escrita y dirigida por John R. Dilworth en su estudio de animación Stretch Films y transmitida por Cartoon Network entre los años 1999 y 2002 con 4 temporadas y 52 episodios. Se inspiró en el cortometraje nominado al Oscar, Courage The Cowardly Dog: The Chicken from Outer Space.</p>
+                    <p>Esta serie tuvo una de las últimas participaciones del veterano actor Víctor Mares en el doblaje, antes de su fallecimiento en el año 2000.
+                        El doblaje contiene modismos mexicanos.
+                        En el episodio "El Demonio del Colchón", Coraje dice "O mi nombre es Richie Hill, y no lo es" haciendo alusión a Ricardo Hill.
+                        En el episodio "Dr. Le Quack, especialista en amnesia", Coraje dice "O algo esta mal aquí, mi nombre es Ricardo Mendoza de Veracruz, y no lo es" haciendo referencia al actor que da voz a Coraje.
+                        En el episodio "La pequeña Muriel", Coraje pinta la silla de Muriel con pegamento de secado rápido, creyendo que era pintura de secado rápido, y al revisar la etiqueta, ésta dice "Pega de locura", haciendo referencia al eslogan de Kola Loka, el cual también es un pegamento.
+                        En el episodio "Todos quieren dirigir", Muriel hablando con Benton Tarantella menciona la película Nosotros los pobres.</p>
                 </article>
     
-                <article class="article">
-                    <h1>Title</h1>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est corrupti repudiandae quo amet magnam
-                        mollitia necessitatibus incidunt veritatis officia veniam aperiam, sunt cumque sequi? Perferendis
-                        doloremque quaerat eos quas dolores.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, ipsum? Minus unde quia officiis ipsum
-                        laboriosam dolorem. Similique, recusandae dicta.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, ipsum? Minus unde quia officiis ipsum
-                        laboriosam dolorem. Similique, recusandae dicta.</p>
-                </article>
             </main>
 
                  <div class="related-post">
@@ -71,14 +60,11 @@
                     <a href="justo.html"><img src="../img/justo.png"></a> 
                 </div>
                 <div class="related-post">
-                    <a href="villanos.html"><img src="../img/la-reina.png"> </a>
+                    <a href="villanos.html"></a><img src="../img/la-reina.png"> 
                 </div>  
 
-
-    
             <footer class="footer">
-                <h4>footer</h4>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Non, necessitatibus.</p>
+                <p>Sitio web desarrollado por Daniela Ovalle :3♡</p>
                 <img src="../img/morita2.png">
             </footer>
     
