--- a/views/sombra.html
+++ b/views/sombra.html
@@ -48,7 +48,7 @@
             </div>
         </main>
         <footer class="footer">
-            <p>Sitio web desarrollado por Daniela Ovalle :3</p>
+            <p>Sitio web desarrollado por Daniela Ovalle :3♡</p>
         </footer>
 
     </div>
