--- a/css/coraje.css
+++ b/css/coraje.css
@@ -187,6 +187,14 @@ body {
     -webkit-transform:scale(1.3);transform:scale(1.3);
 }
 
+
+.footer p{
+    color: white;
+    text-align: center;
+}
+
+
+
 @media only screen and (max-width: 820px) {   
 
     .container {
