--- a/css/estilos.css
+++ b/css/estilos.css
@@ -189,6 +189,13 @@ body {
     -webkit-transform:scale(1.3);transform:scale(1.3);
 }
 
+
+.footer p{
+    color: white;
+    text-align: center;
+}
+
+
 @media only screen and (max-width: 820px) {   
 
     .container {
