--- a/css/galeria.css
+++ b/css/galeria.css
@@ -157,6 +157,13 @@ body {
     -webkit-transform:scale(1.3);transform:scale(1.3);
 }
 
+
+.footer p{
+    color: white;
+    text-align: center;
+}
+
+
 @media only screen and (max-width: 820px) {   
 
     .container {
