--- a/css/index.css
+++ b/css/index.css
@@ -55,7 +55,19 @@ body {
     grid-row: 1/3;
     background-color:rgba(230, 162, 174, 0.37) ;
     color: rgb(255, 255, 255);
-    
+    text-align: center;
+}
+
+.article h1{
+    font-weight: bolder;
+    font-size: 2.9em;
+}
+
+
+.content p{
+    margin-top: 50px;
+    color: rgb(255, 255, 255);
+    font-weight: bolder;
 }
 
 .container .header{
@@ -134,6 +146,12 @@ body {
 }
 
 
+.footer p{
+    color: white;
+    text-align: center;
+}
+
+
 @media only screen and (max-width: 820px) {   
 
     .container {
@@ -154,6 +172,7 @@ body {
 
     .container .content{
         background-color: transparent;
+        
     }
 
     .related-post{
