--- a/css/personajes.css
+++ b/css/personajes.css
@@ -128,6 +128,12 @@ body {
     -webkit-transform:scale(1.3);transform:scale(1.3);
 }
 
+.footer p{
+    color: white;
+    text-align: center;
+}
+
+
 @media only screen and (max-width: 820px) {  
      
     .container .content{
