--- a/views/justo.html
+++ b/views/justo.html
@@ -53,10 +53,8 @@
             </div>
         </main>
         <footer class="footer">
-            <h4>footer</h4>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Non, necessitatibus.</p>
+            <p>Sitio web desarrollado por Daniela Ovalle :3♡</p>
         </footer>
-
     </div>
 </body>
 </html>
