--- a/views/mamajusto.html
+++ b/views/mamajusto.html
@@ -52,8 +52,7 @@
         </main>
         </main>
         <footer class="footer">
-            <h4>footer</h4>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Non, necessitatibus.</p>
+            <p>Sitio web desarrollado por Daniela Ovalle :3♡</p>
         </footer>
 
     </div>
