--- a/views/personajes.html
+++ b/views/personajes.html
@@ -112,8 +112,7 @@
             </article>
         </main>
         <footer class="footer">
-            <h4>footer</h4>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Non, necessitatibus.</p>
+            <p>Sitio web desarrollado por Daniela Ovalle :3♡</p>
         </footer>
 
     </div>
