--- a/views/ramses.html
+++ b/views/ramses.html
@@ -48,8 +48,7 @@
             </div>
         </main>
         <footer class="footer">
-            <h4>footer</h4>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Non, necessitatibus.</p>
+            <p>Sitio web desarrollado por Daniela Ovalle :3♡</p>
         </footer>
 
     </div>
