--- a/views/villanos.html
+++ b/views/villanos.html
@@ -111,8 +111,7 @@
 
         </main>
         <footer class="footer">
-            <h4>footer</h4>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Non, necessitatibus.</p>
+            <p>Sitio web desarrollado por Daniela Ovalle :3♡</p>
         </footer>
 
     </div>
